# hafas-client

./: .appveyor.yml  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  bvg-radar.common.json  bvg-radar.ndjson  contributing.md  db-radar.common.json  db-radar.ndjson  eslint.config.js  example.js  index.d.ts  index.js  license.md  m8-2-mal-durchbindung.json  package.json  parse.js  prodL.js  product-2-namen.json  readme.md  rest-exe-example.js  rest-exe-journeys.json  rest-exe.js  retry.js  stringify.js  throttle.js  todo  vbb-openapi.json  vbb-radar.common.json  vbb-radar.ndjson
.circleci/: config.yml
.github/: funding.yml
benchmark/: index.js  many-departures.json  medium-departures.json
debug-cli/: cli.js  package.json
docs/: api.md  arrivals.md  changelog.md  departures.md  hafas-mgate-api.md  index.md  journey-leg.md  journey-part.md  journeys-from-trip.md  journeys.md  lines.md  location.md  locations.md  migrating-to-3.md  migrating-to-4.md  migrating-to-5.md  migrating-to-6.md  nearby.md  profile-boilerplate.js  radar.md  reachable-from.md  readme.md  refresh-journey.md  remarks.md  server-info.md  station.md  stop.md  subscription-api.md  tests.md  trip.md  trips-by-name.md  writing-a-profile.md
examples/: vbb.rs
find-unknown-fields/: index.js
format/: address.js  coord.js  date.js  filters.js  index.js  lines-req.js  location-filter.js  location-identifier.js  location.js  locations-req.js  nearby-req.js  poi.js  products-bitmask.js  products-filter.js  radar-req.js  (+9 more)
format-rest/: date.js  time.js
(+586 files in other folders)
